--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   path_provider: ^1.4.0
   fluttertoast: ^3.1.3
   http: ^0.12.0+2
+  url_launcher: ^5.2.5
 
 
   # The following adds the Cupertino Icons font to your application.
